{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 57,
  "lineage": "44a39163-077c-f615-5e81-404e1d7beb22",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sinatra_jump",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04f167a56786e4b09",
            "arn": "arn:aws:ec2:us-east-2:891612580685:instance/i-03f6504d3c55113b8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03f6504d3c55113b8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "SinatraKeypairr",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e01027212b974e50",
            "private_dns": "ip-10-0-0-121.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.121",
            "public_ip": "18.225.98.149",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c91f9b930f813241",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09e4518ad5c7e44dd",
            "tags": {
              "Name": "sinatra-jump-server"
            },
            "tags_all": {
              "Name": "sinatra-jump-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01538d2f2b21575f5"
            ]
          },
          "dependencies": [
            "aws_security_group.sinatra_jump_sg",
            "aws_subnet.sinatra_subnet",
            "aws_vpc.sinatra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "sinatra_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:891612580685:internet-gateway/igw-023bd276e154f9698",
            "id": "igw-023bd276e154f9698",
            "owner_id": "891612580685",
            "tags": {
              "Name": "sinatra-igw"
            },
            "tags_all": {
              "Name": "sinatra-igw"
            },
            "vpc_id": "vpc-0eb34b7153811f7fc"
          },
          "dependencies": [
            "aws_vpc.sinatra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sinatra_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:891612580685:route-table/rtb-03f88dec9d4c1c984",
            "id": "rtb-03f88dec9d4c1c984",
            "owner_id": "891612580685",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-023bd276e154f9698",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sinatra-route-table"
            },
            "tags_all": {
              "Name": "sinatra-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb34b7153811f7fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.sinatra_igw",
            "aws_vpc.sinatra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096da188a32b33a8f",
            "route_table_id": "rtb-03f88dec9d4c1c984",
            "subnet_id": "subnet-09e4518ad5c7e44dd"
          },
          "dependencies": [
            "aws_internet_gateway.sinatra_igw",
            "aws_route_table.sinatra_route_table",
            "aws_subnet.sinatra_subnet",
            "aws_vpc.sinatra_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0978b385bae404556",
            "route_table_id": "rtb-03f88dec9d4c1c984",
            "subnet_id": "subnet-0aaece700333ad541"
          },
          "dependencies": [
            "aws_internet_gateway.sinatra_igw",
            "aws_route_table.sinatra_route_table",
            "aws_subnet.sinatra_subnet",
            "aws_vpc.sinatra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sinatra_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:891612580685:security-group/sg-0313617f03f061d20",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0313617f03f061d20",
            "ingress": [],
            "name": "terraform-20250516104658700600000005",
            "name_prefix": "terraform-",
            "owner_id": "891612580685",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sinatra-cluster-sg"
            },
            "tags_all": {
              "Name": "sinatra-cluster-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb34b7153811f7fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sinatra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sinatra_jump_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:891612580685:security-group/sg-01538d2f2b21575f5",
            "description": "Allow SSH and app ports for jump server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01538d2f2b21575f5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "App port 3000",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "App port 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "App port 9000",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sinatra-jump-sg",
            "name_prefix": "",
            "owner_id": "891612580685",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sinatra-jump-sg"
            },
            "tags_all": {
              "Name": "sinatra-jump-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb34b7153811f7fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sinatra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sinatra_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:891612580685:security-group/sg-0f0a7dc7be4c8d7c0",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f0a7dc7be4c8d7c0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20250516104658713700000006",
            "name_prefix": "terraform-",
            "owner_id": "891612580685",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sinatra-node-sg"
            },
            "tags_all": {
              "Name": "sinatra-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb34b7153811f7fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.sinatra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sinatra_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:891612580685:subnet/subnet-09e4518ad5c7e44dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e4518ad5c7e44dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891612580685",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sinatra-subnet-0"
            },
            "tags_all": {
              "Name": "sinatra-subnet-0"
            },
            "vpc_id": "vpc-0eb34b7153811f7fc"
          },
          "dependencies": [
            "aws_vpc.sinatra_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:891612580685:subnet/subnet-0aaece700333ad541",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aaece700333ad541",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891612580685",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sinatra-subnet-1"
            },
            "tags_all": {
              "Name": "sinatra-subnet-1"
            },
            "vpc_id": "vpc-0eb34b7153811f7fc"
          },
          "dependencies": [
            "aws_vpc.sinatra_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "sinatra_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:891612580685:vpc/vpc-0eb34b7153811f7fc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00eb8b3a3ac5dc1fc",
            "default_route_table_id": "rtb-0285750a1e131990d",
            "default_security_group_id": "sg-00de50abf6e0ffa84",
            "dhcp_options_id": "dopt-01e33c8697444a582",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eb34b7153811f7fc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0285750a1e131990d",
            "owner_id": "891612580685",
            "tags": {
              "Name": "sinatra-vpc"
            },
            "tags_all": {
              "Name": "sinatra-vpc"
            }
          }
        }
      ]
    }
  ]
}